--- a/ChordApp/Components/Pages/ChordConstructor.razor
+++ b/ChordApp/Components/Pages/ChordConstructor.razor
@@ -1,21 +1,35 @@
 ﻿@page "/chord-constructor"
 @rendermode InteractiveServer
 
-<p role="status">Current count: @chord</p>
+<p role="status">Current Base: @chords</p>
 <p role="status">Current Depth: @depth</p>
 
-<button class="btn btn-primary" @onclick="GenerateChord">Click me</button>
+<p>
+    <input type="text" value ="C" @oninput="(EventArgs) => {OnChange(EventArgs.Value.ToString());}"/>
+    <button class="btn btn-primary" @onclick="GenerateChord">Click me</button>
+</p>
 
 @code {
-    private string chord = "A";
+    private string root = "C";
     private Chord chordObj;
     private int depth = 0;
+    private string chords;
+
+    private void OnChange(string Value)
+    {
+        root = Value;
+    }
 
     private void GenerateChord()
     {
-        chord = "B";
-        chordObj = new Chord("C");
-        chord = chordObj.ToString();
-        depth = chordObj.MaxDepth();
+        try
+        {
+            chordObj = new Chord(root.Split(' '));
+            chords = chordObj.ToString();
+        }
+        catch (ArgumentException ex)
+        {
+            Console.WriteLine(ex.Message);
+        }
     }
 }
